# codra-predictive-valve-guardian

./: .Dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG  Dockerfile  Makefile  README.md  codra-predictive-valve-guardian.code-workspace  justfile  main.py  predictive-valve-guardian.code-workspace  pyproject.toml  ruff.toml
dashboard/: app.py  constants.py  visualization.py
data/: build_dataset.py  constants.py  retrieve_data.py
model/: constants.py  predictor.py
processor/: .Dockerignore  constants.py
processor/data/: build_dataset.py  constants.py  retrieve_data.py
processor/model/: constants.py  predictor.py
processor/model/cached/: model.pkl
processor/tests/: verify_data.py  verify_model.py
processor/train/: model_estimation.py  train.py
src/dashboard/: app.py  data.py  sidebar.py  state.py  visualization.py
src/processor/config/: model_config.py
src/processor/data/: build_dataset.py  constants.py  retrieve_data.py
src/processor/model/: __init__.py  classifier_protocol.py  constants.py  pipeline.py  predictor.py
src/processor/model/cached/: model.pkl
src/processor/train/: __main__.py  model_candidates.py  model_estimation.py  train.py
terraform/: Makefile  README.md  justfile  main.tf  out.tf  terraform.tfvars.example  variables.tf
tests/: README.md  verify_model.py
tests/demo/: verify_data.py  verify_model.py
train/: model_estimation.py  train.py
