[project]
name = "codra-predictive-valve-guardian"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel",
    "pandas",
    "numpy",
    "black",
    "isort",
    "requests",
    "mlflow",
    # "torch",
    "xgboost",
]
